- Fixed bug #46157 (PDOStatement::fetchObject prototype error)